--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <footer>
         <p>
-            Site criado por <a href="https://github.com/Maicon501/" target="_blank">Maicon Santo</a>s, Aprendeu criar site no HTML.
+            Site criado por <a href="https://github.com/Maicon501/" target="_blank">Maicon Santos</a>, Aprendeu criar site no HTML.
         </p>
     </footer>
     
