atualizando projeto android

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <footer>
         <p>
             Site criado por <a href="https://github.com/Maicon501/" target="_blank">Maicon Santos</a>, Aprendeu criar site no HTML.
+            Site criado em.01/10/24 
         </p>
     </footer>
     
